# 设置版本
cmake_minimum_required(VERSION 3.27)
# 设置项目名称
project(LearnC__)
# 设置c++编译标准
set(CMAKE_CXX_STANDARD 20)

add_subdirectory(exercise)
add_subdirectory(learn_c++00)
add_subdirectory(learn_c++03)
add_subdirectory(learn_c++04)
add_subdirectory(learn_c++05)
add_subdirectory(learn_c++06)
add_subdirectory(learn_c++07)
add_subdirectory(learn_c++08)
add_subdirectory(learn_c++09)
add_subdirectory(learn_c++10)
add_subdirectory(learn_c++11)
add_subdirectory(learn_c++12)
add_subdirectory(learn_c++13)
add_subdirectory(learn_c++14)
add_subdirectory(learn_c++15)
add_subdirectory(learn_c++16)
add_subdirectory(learn_c++17)
add_subdirectory(learn_c++18)