add_executable(work1 work1.cpp)
add_executable(work2 work2.cpp)
add_executable(work3 work3.cpp)
add_executable(work4 work4.cpp)
add_executable(work5 work5.cpp)
add_executable(work6 work6.cpp)
add_executable(work7 work7.cpp)
add_executable(work8 work8.cpp)
add_executable(work9 work9.cpp)
add_executable(work10 work10.cpp)
add_executable(work11 work11.cpp)